<resources>
    <string name="app_name">To-Do List</string>
    <string name="task_title">Title</string>
    <string name="task_description">Description</string>
    <string name="splash">To-Do List</string>
    <string name="posted_by">Posted By:&#160;</string>
    <string name="sign_out">Sign Out</string>
    <string name="group_code">Enter Group Code</string>
    <string name="submit">Submit</string>
    <string name="change_group">Change Group</string>
    <string name="case_sensitive">Note: The group code is case-sensitive.</string>
    <string name="attach">Attach an image (optional)</string>
    <string name="select_option">Welcome to To-Do List. Please enter the Group Code to proceed. &#xD;If there is no group with that code, it will be created.</string>
    <string name="nav_todo">To-Do List</string>
    <string name="nav_chat">Group Chat</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="ver">Version 0.1 Beta 2</string>
    <string name="site">pshkrh.com</string>
    <string name="select">Select an Option</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="communicate">Communicate</string>
    <string name="placeholder">Placeholder Text</string>
    <string name="chat_name">Placeholder Name</string>
    <string name="group_chat">\'s Group Chat</string>
    <string name="enter_msg">Enter a message</string>
    <string name="under_text">The Realtime To-Do List and Chat App</string>
    <string name="signed_in_as">Signed in as:</string>
    <string name="anonymous">Anonymous User</string>
    <string name="image_filename">File Name: </string>
</resources>
