<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="@string/select">
            <menu>
                <item
                    android:id="@+id/todo"
                    android:icon="@drawable/ic_format_list_checks_grey600_24dp"
                    android:title="@string/nav_todo">
                </item>

                <item
                    android:id="@+id/chat"
                    android:icon="@drawable/ic_message_text_grey600_24dp"
                    android:title="@string/nav_chat">

                </item>

            </menu>
        </item>
    </group>

    <item android:title="@string/help">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_information_black_24dp"
                android:title="@string/about" />
            <item
                android:id="@+id/contact"
                android:icon="@drawable/ic_send_black_24dp"
                android:title="@string/contact" />
        </menu>
    </item>
</menu>